--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,9 @@
   "extends": [
     "next",
     "prettier"
-  ]
+  ],
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "no-unused-vars": "warn"
+  }
 }
